// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render component with disabled state 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c4 {
  pointer-events: none;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c0 {
  width: 16px;
}

fieldset[data-dimension='s'] .c0 {
  height: 16px;
}

.c3 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c3 *[fill^='#'] {
  fill: #FFFFFF;
}

.c1 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c1 ::-ms-check {
  display: none;
}

.c1:checked+.c2 {
  background-color: #0062FF;
  border: none;
}

.c1:disabled {
  pointer-events: none;
}

.c1:disabled+.c2 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c1:not(:checked)+.c2 >* {
  display: none;
}

.c1:hover:not(:disabled)::after,
.c1:focus:not(:disabled)+.c1:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c1:checked:disabled+.c2 {
  background-color: #A7C7FF;
  border: none;
}

.c1:checked:disabled+.c2 *[fill^='#'] {
  fill: #FFFFFF;
}

.c1:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

<body>
    <div>
      <div
        class="c0"
      >
        <input
          class="c1"
          data-testid="element"
          disabled=""
          type="checkbox"
        />
        <div
          class="c2 c3"
        >
          <div
            aria-hidden="true"
            class="c4"
            focusable="false"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": .c4 {
  pointer-events: none;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c0 {
  width: 16px;
}

fieldset[data-dimension='s'] .c0 {
  height: 16px;
}

.c3 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c3 *[fill^='#'] {
  fill: #FFFFFF;
}

.c1 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c1 ::-ms-check {
  display: none;
}

.c1:checked+.c2 {
  background-color: #0062FF;
  border: none;
}

.c1:disabled {
  pointer-events: none;
}

.c1:disabled+.c2 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c1:not(:checked)+.c2 >* {
  display: none;
}

.c1:hover:not(:disabled)::after,
.c1:focus:not(:disabled)+.c1:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c1:checked:disabled+.c2 {
  background-color: #A7C7FF;
  border: none;
}

.c1:checked:disabled+.c2 *[fill^='#'] {
  fill: #FFFFFF;
}

.c1:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

<div>
    <div
      class="c0"
    >
      <input
        class="c1"
        data-testid="element"
        disabled=""
        type="checkbox"
      />
      <div
        class="c2 c3"
      >
        <div
          aria-hidden="true"
          class="c4"
          focusable="false"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Checkbox should render component with required properties 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c4 {
  pointer-events: none;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c0 {
  width: 16px;
}

fieldset[data-dimension='s'] .c0 {
  height: 16px;
}

.c3 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c3 *[fill^='#'] {
  fill: #FFFFFF;
}

.c1 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c1 ::-ms-check {
  display: none;
}

.c1:checked+.c2 {
  background-color: #0062FF;
  border: none;
}

.c1:disabled {
  pointer-events: none;
}

.c1:disabled+.c2 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c1:not(:checked)+.c2 >* {
  display: none;
}

.c1:hover:not(:disabled)::after,
.c1:focus:not(:disabled)+.c1:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c1:checked:disabled+.c2 {
  background-color: #A7C7FF;
  border: none;
}

.c1:checked:disabled+.c2 *[fill^='#'] {
  fill: #FFFFFF;
}

.c1:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

<body>
    <div>
      <div
        class="c0"
      >
        <input
          class="c1"
          data-testid="element"
          type="checkbox"
        />
        <div
          class="c2 c3"
        >
          <div
            aria-hidden="true"
            class="c4"
            focusable="false"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": .c4 {
  pointer-events: none;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c0 {
  width: 16px;
}

fieldset[data-dimension='s'] .c0 {
  height: 16px;
}

.c3 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c3 *[fill^='#'] {
  fill: #FFFFFF;
}

.c1 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c1 ::-ms-check {
  display: none;
}

.c1:checked+.c2 {
  background-color: #0062FF;
  border: none;
}

.c1:disabled {
  pointer-events: none;
}

.c1:disabled+.c2 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c1:not(:checked)+.c2 >* {
  display: none;
}

.c1:hover:not(:disabled)::after,
.c1:focus:not(:disabled)+.c1:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c1:checked:disabled+.c2 {
  background-color: #A7C7FF;
  border: none;
}

.c1:checked:disabled+.c2 *[fill^='#'] {
  fill: #FFFFFF;
}

.c1:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

<div>
    <div
      class="c0"
    >
      <input
        class="c1"
        data-testid="element"
        type="checkbox"
      />
      <div
        class="c2 c3"
      >
        <div
          aria-hidden="true"
          class="c4"
          focusable="false"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Checkbox should render component with small dimension 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c4 {
  pointer-events: none;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 16px;
  height: 16px;
}

fieldset[data-dimension='s'] .c0 {
  width: 16px;
}

fieldset[data-dimension='s'] .c0 {
  height: 16px;
}

.c3 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c3 *[fill^='#'] {
  fill: #FFFFFF;
}

.c1 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c1 ::-ms-check {
  display: none;
}

.c1:checked+.c2 {
  background-color: #0062FF;
  border: none;
}

.c1:disabled {
  pointer-events: none;
}

.c1:disabled+.c2 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c1:not(:checked)+.c2 >* {
  display: none;
}

.c1:hover:not(:disabled)::after,
.c1:focus:not(:disabled)+.c1:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c1:checked:disabled+.c2 {
  background-color: #A7C7FF;
  border: none;
}

.c1:checked:disabled+.c2 *[fill^='#'] {
  fill: #FFFFFF;
}

.c1:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

<body>
    <div>
      <div
        class="c0"
      >
        <input
          class="c1"
          data-testid="element"
          type="checkbox"
        />
        <div
          class="c2 c3"
        >
          <div
            aria-hidden="true"
            class="c4"
            focusable="false"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": .c4 {
  pointer-events: none;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 16px;
  height: 16px;
}

fieldset[data-dimension='s'] .c0 {
  width: 16px;
}

fieldset[data-dimension='s'] .c0 {
  height: 16px;
}

.c3 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c3 *[fill^='#'] {
  fill: #FFFFFF;
}

.c1 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c1 ::-ms-check {
  display: none;
}

.c1:checked+.c2 {
  background-color: #0062FF;
  border: none;
}

.c1:disabled {
  pointer-events: none;
}

.c1:disabled+.c2 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c1:not(:checked)+.c2 >* {
  display: none;
}

.c1:hover:not(:disabled)::after,
.c1:focus:not(:disabled)+.c1:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c1:checked:disabled+.c2 {
  background-color: #A7C7FF;
  border: none;
}

.c1:checked:disabled+.c2 *[fill^='#'] {
  fill: #FFFFFF;
}

.c1:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

<div>
    <div
      class="c0"
    >
      <input
        class="c1"
        data-testid="element"
        type="checkbox"
      />
      <div
        class="c2 c3"
      >
        <div
          aria-hidden="true"
          class="c4"
          focusable="false"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
